--- a/OR/Configs/Char.cfg
+++ b/OR/Configs/Char.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#7F7F7F>[HAZARD LEVEL: 3] \n[CLASS: Vacuum]</color> \nBy far the most unfortunate celestial body in the solar system. Burnt and battered from millions of years of solar torment, the moon is locked in a retrograde orbit between the two most unstable bodies in the Ignotum System. The heat and tidal stress have reduced its surface into a shattered mosaic of pulverized rock and gravel.\n\nChar is fast approaching Fracture's roche limit. We suspect it does not have much time left.
+			description = <color=#7F7F7F>[HAZARD LEVEL: 3]\n[CLASS: Vacuum]</color>\n[DATA RECOVERED FROM EXPEDITION]\nBy far the most unfortunate celestial body in the solar system. Burnt and battered from millions of years of solar torment, the moon is locked in a retrograde orbit between the two most unstable bodies in the Ignotum System. The heat and tidal stress have reduced its surface into a shattered mosaic of pulverized rock and gravel.\n\nChar is fast approaching Fracture's roche limit. We suspect it does not have much time left.
 
 			radius = 12500
 			geeASL = 0.06
