--- a/OR/Configs/Echo.cfg
+++ b/OR/Configs/Echo.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Echo
-		randomMainMenuBody = true
+		randomMainMenuBody = false
 		cacheFile = OR/Cache/Echo.bin
 		Template
 		{
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#47C199>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nOne of two truly habitable planets in the Ignotum System. It has soaring blue skies, expansive oceans of water, and continents overflowing with what is undoubtedly plant life. A large set of rings and a mineral-rich moon decorate the planet. Exploring this world is a top priority for our expedition. \n\nEcho was the planet we were supposed to colonize for the expedition. The key phrase here is “supposed to.”\n\nWEATHER REPORT: Hazardous. While Echo's weather is generally mild, the planet is home to the most powerful class of tropical cyclone ever theorized: a hypercane. With 10,000 vertical meters of pounding rains and devastating winds, this storm should be avoided at all costs.
+			description = <color=#47C199>[HAZARD LEVEL: 3]\n[CLASS: Atmospheric]</color>\n[DATA RECOVERED FROM EXPEDITION]\nOne of two truly habitable planets in the Ignotum System. It has soaring blue skies, expansive oceans of water, and continents overflowing with what is undoubtedly plant life. A large set of rings and a mineral-rich moon decorate the planet. Exploring this world is a top priority for our expedition. \n\nEcho was the planet we were supposed to colonize for the expedition. The key phrase here is “supposed to.”\n\nWEATHER REPORT: Hazardous. While Echo's weather is generally mild, the planet is home to the most powerful class of tropical cyclone ever theorized: a hypercane. With 10,000 vertical meters of pounding rains and devastating winds, this storm should be avoided at all costs.
 			radius = 550000
 			geeASL = 0.93
 			albedo = 0.3
@@ -127,7 +127,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Sun
+			referenceBody = Solus
 			color = 0.276922882,0.473077029,0.384615511,1
 			iconTexture = OR/OR_Textures/PluginData/Icons/Echo.png
 			inclination = 7
