--- a/OR/Configs/Frontier.cfg
+++ b/OR/Configs/Frontier.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Kerbin
+		name = Frontier
 		randomMainMenuBody = false
 		cacheFile = OR/Cache/Frontier.bin
 		Template
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#C1C1C1>[HAZARD LEVEL: 3] \n[CLASS: Exotic Atmospheric]</color> \nThe largest and oldest terrestrial planet in the Ignotum System. It is a bitterly cold world of rock and ice that we now call home. Upon entering the Ignotum System, our ship malfunctioned, and we were forced to either crash here or asphyxiate in space. While the surface conditions are…unfavorable…we have the equipment to survive, and morale is high. The expedition will go on.\n\Though Frontier’s gravity is more intense than Kerbin’s, its atmosphere is shorter, enabling easy travel into space.\n\nWEATHER REPORT: Mild. Frontier is the least active celestial body in the entire solar system; it has no weather beyond occasional snowstorms. This is a good thing for us.
+			description = <color=#C1C1C1>[HAZARD LEVEL: 3] \n[CLASS: Exotic Atmospheric]</color>\n[DATA RECOVERED FROM EXPEDITION]\nThe largest and oldest terrestrial planet in the Ignotum System. It is a bitterly cold world of rock and ice that we now call home. Upon entering the Ignotum System, our ship malfunctioned, and we were forced to either crash here or asphyxiate in space. While the surface conditions are…unfavorable…we have the equipment to survive, and morale is high. The expedition will go on.\n\Though Frontier’s gravity is more intense than Kerbin’s, its atmosphere is shorter, enabling easy travel into space.\n\nWEATHER REPORT: Mild. Frontier is the least active celestial body in the entire solar system; it has no weather beyond occasional snowstorms. This is a good thing for us.
 
 			radius = 625000
 			geeASL = 1.15
@@ -127,7 +127,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Sun
+			referenceBody = Solus
 			color = 1,1,1,1
 			iconTexture = OR/OR_Textures/PluginData/Icons/Frontier.png
 			inclination = 5
@@ -846,42 +846,6 @@
 					}
 				}
 			}
-		}
-		SpaceCenter
-		{
-			radius = 7000
-			heightMapDeformity = 156
-			absoluteOffset = 100
-			latitude = 5
-			longitude = -48
-			decalLatitude = 5
-			decalLongitude = -48
-			lodvisibleRangeMult = 1
-			repositionRadiusOffset = 227 
-			reorientFinalAngle = 319 
-			reorientToSphere = True
-			repositionToSphere = True
-			repositionToSphereSurface = False
-			repositionToSphereSurfaceAddHeight = False
-			groundColor = 0.446154088,0.343076438,0.334615499,1
-			groundTexture = CTTP/Textures/PluginData/gravel.dds
-			Material
-			{
-				nearGrassTexture = CTTP/Textures/PluginData/gravel.dds
-				nearGrassTextureOffset = 0,0
-				nearGrassTextureScale = 1,1
-				nearGrassTiling = 0.06
-				farGrassTexture = CTTP/Textures/PluginData/gravel.dds
-				farGrassTextureOffset = 0,0
-				farGrassTextureScale = 1,1
-				farGrassTiling = 0.05
-				farGrassBlendDistance = 3000
-				opacity = 1
-			}
-			editorGroundColor = 0.446154088,0.343076438,0.334615499,1
-			editorGroundTexture = CTTP/Textures/PluginData/gravel.dds
-			editorGroundTexScale = 25
-			editorGroundTexOffset = 0
 		}
 	}
 }
