--- a/OR/Configs/Icebound.cfg
+++ b/OR/Configs/Icebound.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#3C8EC4>[HAZARD LEVEL: 3] \n[CLASS: Vacuum]</color> \nA quiet glacial world. It may appear to be a normal ice moon at first glance, but closer inspection reveals something unprecedented: massive pillars of ice reaching far into space. The nature of these pillars is currently unknown, but we speculate that tidal heating plays a role in their formation. \n\nIcebound was originally named Spiky Boi by the expedition lead’s kerdaughter. This was later changed to Icebound for professionalism.
+			description = <color=#3C8EC4>[HAZARD LEVEL: 3] \n[CLASS: Vacuum]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA quiet glacial world. It may appear to be a normal ice moon at first glance, but closer inspection reveals something unprecedented: massive pillars of ice reaching far into space. The nature of these pillars is currently unknown, but we speculate that tidal heating plays a role in their formation. \n\nIcebound was originally named Spiky Boi by the expedition lead’s kerdaughter. This was later changed to Icebound for professionalism.
 
 			radius = 190000
 			geeASL = 0.3
