--- a/OR/Configs/MB.cfg
+++ b/OR/Configs/MB.cfg
@@ -15,7 +15,7 @@
 		}
 		Properties
 		{
-			description = <color=#4CFF00>[HAZARD LEVEL: ?] \n[CLASS: ?]</color> \nOh, huh. So that's where it went....
+			description = <color=#4CFF00>[HAZARD LEVEL: ?]\n[DATA RECOVERED FROM EXPEDITION]\n[CLASS: ?]</color> \nOh, huh. So that's where it went....
 
 			radius = 1000
 			geeASL = 0.001
