--- a/OR/Configs/Night.cfg
+++ b/OR/Configs/Night.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#727272>[HAZARD LEVEL: ?] \n[CLASS: ?]</color> \nWe aren’t exactly sure what this thing is. Night is visible as an uneven black void when viewed through a telescope, and that’s about all we know. Attempts to analyze its surface properties have all failed due to its surface absorbing an impossible 100% of incident light. As with all the moons circling Rage, Kerbals planning to explore Night should proceed with caution. \n\nWe recommend bringing glowsticks.
+			description = <color=#727272>[HAZARD LEVEL: ?]\n[CLASS: ?]</color>\n[DATA RECOVERED FROM EXPEDITION]\nWe aren’t exactly sure what this thing is. Night is visible as an uneven black void when viewed through a telescope, and that’s about all we know. Attempts to analyze its surface properties have all failed due to its surface absorbing an impossible 100% of incident light. As with all the moons circling Rage, Kerbals planning to explore Night should proceed with caution. \n\nWe recommend bringing glowsticks.
 
 			radius = 15000
 			geeASL = 0.008
