--- a/OR/Configs/Odyssey.cfg
+++ b/OR/Configs/Odyssey.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#A5A5A5>[HAZARD LEVEL: 5+] \n[CLASS: Exotic Vacuum]</color> \nAn ugly duckling unlikely to turn into a beautiful swan. It was slingshotted through interstellar space into the heart of the Serenity-Tranquility system recently—we watched it happen. Where Odyssey came from is a mystery; however, judging by its gaping scream, we can conclude one thing: its journey across the infinite void was a traumatic one. Traveling here is ill-advised.\n\nOur lead planetary scientist says Odyssey should be described as "scringly".
+			description = <color=#A5A5A5>[HAZARD LEVEL: 5+]\n[CLASS: Exotic Vacuum]</color>\n[DATA RECOVERED FROM EXPEDITION]\nAn ugly duckling unlikely to turn into a beautiful swan. It was recently slingshotted through interstellar space into the heart of the Serenity-Tranquility system—as in, we watched it happen. Where Odyssey came from is a mystery; however, judging by its gaping scream, we can conclude one thing: its journey across the infinite void was a traumatic one. Traveling here is ill-advised.\n\nOur lead planetary scientist says Odyssey should be described as "scringly".
 			radius = 564000
 			geeASL = 1.5
 			albedo = 0.25
