--- a/OR/Configs/Rage.cfg
+++ b/OR/Configs/Rage.cfg
@@ -18,7 +18,7 @@
         Properties
         {
 			displayName = Rage^N
-            description = <color=#969696>[HAZARD LEVEL: 5] \n[CLASS: Gas Giant]</color> \nA massive gas giant marking the beginning of the outer Ignotum System. It is home to the most violent storms known to Kerbalkind, with pressures and temperatures exceeding those of Jool. Manned exploration is highly unrecommended. Thankfully, the planet has a system of three moons and one unclassified object to satisfy our desire for adventure. \n\nLanding on Rage is obviously not possible. Sure, nobody has checked yet, but we are all fairly confident that you will die trying.\n\nWEATHER REPORT: Severe. Rage's storms start strong and grow angrier with increasing depth. If the pressure doesn't kill first, the wind and lightning certainly will. 
+            description = <color=#969696>[HAZARD LEVEL: 5]\n[CLASS: Gas Giant]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA massive gas giant marking the beginning of the outer Ignotum System. It is home to the most violent storms known to Kerbalkind, with pressures and temperatures exceeding those of Jool. Manned exploration is highly unrecommended. Thankfully, the planet has a system of three moons and one unclassified object to satisfy our desire for adventure. \n\nLanding on Rage is obviously not possible. Sure, nobody has checked yet, but we are all fairly confident that you will die trying.\n\nWEATHER REPORT: Severe. Rage's storms start strong and grow angrier with increasing depth. If the pressure doesn't kill first, the wind and lightning certainly will. 
 			
 			radius = 6200000
             geeASL = 0.82
@@ -89,7 +89,7 @@
 		}
         Orbit
         {
-            referenceBody = Sun
+            referenceBody = Solus
             color = 0.5,0.5,0.5,1
 			iconTexture = OR/OR_Textures/PluginData/Icons/Rage.png
             inclination = 4
