--- a/OR/Configs/Scar.cfg
+++ b/OR/Configs/Scar.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#AF7A56>[HAZARD LEVEL: 1] \n[CLASS: Exotic Vacuum]</color> \nThe only vacuum body known to have tectonic activity. Massive rifts and ridges crisscross its surface, which is extraordinarily warm for being in direct contact with space. We are very fortunate to have this celestial body in such proximity to our space center. \n\nDue to its similarities to a terrestrial world, astronomers have suggested building colonies on Scar. Our seismologists are saying that this would "not be a good idea." 
+			description = <color=#AF7A56>[HAZARD LEVEL: 1]\n[CLASS: Exotic Vacuum]</color>\n[DATA RECOVERED FROM EXPEDITION]\nThe only vacuum body known to have tectonic activity. Massive rifts and ridges crisscross its surface, which is extraordinarily warm for being in direct contact with space. We are very fortunate to have this celestial body in such proximity to our space center. \n\nDue to its similarities to a terrestrial world, astronomers have suggested building colonies on Scar. Our seismologists are saying that this would "not be a good idea." 
 
 			radius = 80000
 			geeASL = 0.08
@@ -119,7 +119,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Kerbin
+			referenceBody = Frontier
 			color = 0.480769217,0.380768657,0.300000012,0.800000012
 			nodeColor = 0.480769217,0.380768657,0.300000012,0.800000012
 			iconTexture = OR/OR_Textures/PluginData/Icons/Scar.png
