--- a/OR/Configs/Scourge.cfg
+++ b/OR/Configs/Scourge.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#893030>[HAZARD LEVEL: ???] \n[CLASS: ???]</color> \nA real-life embodiment of “look, but do not touch”. This planet is to be avoided at all costs. Little is known about it due to its unpleasant nature: the air is dense and poisonous, the land pulses from intense volcanic activity, and upon landing, probes sent into its oceans were seized by an unknown force and sucked into oblivion. The dead kraken in our solar system was a joke played by whatever demon lives here. \n\nScourge was long omitted from the tracking station to avoid furt### ### # # ### # ##. We believe we are wise enough now not to make the same mistake again.\n\nWEATHER REPORT: Mild(?). Several of Scourge's active volcanoes spew gas and dust of an unknown composition. The planet is otherwise devoid of clouds.
+			description = <color=#893030>[HAZARD LEVEL: ???] \n[CLASS: ???]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA real-life embodiment of “look, but do not touch”. This planet is to be avoided at all costs. Little is known about it due to its unpleasant nature: the air is dense and poisonous, the land pulses from intense volcanic activity, and upon landing, probes sent into its oceans were seized by an unknown force and sucked into oblivion. The dead kraken in our solar system was a joke played by whatever demon lives here. \n\nScourge was long omitted from the tracking station to avoid furt### ### # # ### # ##. We believe we are wise enough now not to make the same mistake again.\n\nWEATHER REPORT: Mild(?). Several of Scourge's active volcanoes spew gas and dust of an unknown composition. The planet is otherwise devoid of clouds.
 			
 			radius = 400000
 			geeASL = 0.75
@@ -121,9 +121,9 @@
 		}
 		Orbit
 		{
-			referenceBody = Sun
-			color = 0,0,0,1
-			nodeColor = 0,0,0,1
+			referenceBody = Solus
+			color = 0.05,0.05,0.05,1
+			nodeColor = 0.05,0.05,0.05,1
 			iconTexture = OR/OR_Textures/PluginData/Icons/Scourge.png
 			inclination = 5
 			eccentricity = 0.0375
