--- a/OR/Configs/Siren.cfg
+++ b/OR/Configs/Siren.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#A97EB5>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color> \nAn extremely battered captured asteroid that barely counts as a moon. It weaves between Scourge's rings and helps maintain their stability. With a smashed surface and borderline nonexistent gravity, landing here is going to be frustrating. \n\nMany top Kerbals have suggested deorbiting Siren "just for fun". These Kerbals have been promoted to runway shovelling duty.
+			description = <color=#A97EB5>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color>\n[DATA RECOVERED FROM EXPEDITION]\nAn extremely battered captured asteroid that barely counts as a moon. It weaves between Scourge's rings and helps maintain their stability. With a smashed surface and borderline nonexistent gravity, landing here is going to be frustrating. \n\nMany top Kerbals have suggested deorbiting Siren "just for fun". These Kerbals have been promoted to runway shovelling duty.
 
 			radius = 3500
 			geeASL = 0.045
