--- a/OR/Configs/Solus.cfg
+++ b/OR/Configs/Solus.cfg
@@ -2,7 +2,7 @@
 {
 	Body
 	{
-		name = Sun
+		name = Solus
 		randomMainMenuBody = false
 		Debug
 		{
@@ -15,13 +15,28 @@
 		}
 		Properties
 		{
-			description = <color=#FFFFE1>[HAZARD LEVEL: 5] \n[CLASS: Star]</color> \nThe main sequence star at the center of the Ignotum System. Though similar in size and color to Kerbol, it is far more active, hosting sunspots and magnetic banding unlike anything we've seen. Fortunately for its child worlds, longitudinal studies of the star indicate that CMEs are rare. \n\nIf you look directly at Solus, it is really, really bright.\n\nWEATHER REPORT: White-hot death.
+			description = <color=#FFFFE1>[HAZARD LEVEL: 5] \n[CLASS: Star]</color>\n[DATA RECOVERED FROM EXPEDITION]\nThe main sequence star at the center of the Ignotum System. Though similar in size and color to Kerbol, it is far more active, hosting sunspots and magnetic banding unlike anything we've seen. Fortunately for its child worlds, longitudinal studies of the star indicate that CMEs are rare. \n\nIf you look directly at Solus, it is really, really bright.\n\nWEATHER REPORT: White-hot death.
 			
 			radius = 76267400
 			starLuminosity = 1.1
 			displayName = Solus
 			mass = 1.9497659e+28
 		}
+		Orbit
+        {
+            referenceBody = Sun
+            color = 0,0,0,0
+			nodeColor = 1,1,1,1
+            inclination = -21.62
+            eccentricity = 0.0024
+            semiMajorAxis = 3.188E14
+            longitudeOfAscendingNode = 136
+            argumentOfPeriapsis = 91
+            meanAnomalyAtEpoch = 0
+            epoch = 77
+			mode = OFF
+			iconTexture = OR/OR_Textures/PluginData/Icons/Solus.png
+        }
 		ScaledVersion
 		{
             Light
