--- a/OR/Configs/Vista.cfg
+++ b/OR/Configs/Vista.cfg
@@ -3,7 +3,7 @@
 	Body
 	{
 		name = Vista
-		randomMainMenuBody = false
+		randomMainMenuBody = true
 		cacheFile = OR/Cache/Vista.bin
 		Template
 		{
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#AFAFAF>[HAZARD LEVEL: 1] \n[CLASS: Vacuum]</color> \nA crystalline oasis that calls Echo its home. It plays a critical role in stabilizing Echo’s rings and climate (and making the place even prettier to visit). The monochrome colors of the moon’s surface are hypothesized to be clusters of quartz crystals and silicon, which our telescopes can see shimmering in the sunlight. Because of its low gravity and lack of hazards, this world is a prime destination for early trips to Echo. \n\nVista has a distinctive white band of ring matter encircling its equator, making it very easy to identify.
+			description = <color=#AFAFAF>[HAZARD LEVEL: 1] \n[CLASS: Vacuum]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA crystalline oasis that calls Echo its home. It plays a critical role in stabilizing Echo’s rings and climate (and making the place even prettier to visit). The monochrome colors of the moon’s surface are hypothesized to be clusters of quartz crystals and silicon, which our telescopes can see shimmering in the sunlight. Because of its low gravity and lack of hazards, this world is a prime destination for early trips to Echo. \n\nVista has a distinctive white band of ring matter encircling its equator, making it very easy to identify.
 
 			radius = 70000
 			geeASL = 0.07
