--- a/OR/Configs/Windswept.cfg
+++ b/OR/Configs/Windswept.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#E0A896>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color> \nA gorgeous desert planet that suffers from frequent dust storms. It has large red basins and sandy continents, indicating it used to have shallow oceans and potentially life. Because the planet is no longer tectonically active, it may be possible to find intact fossils on its surface. \n\nWhen we first entered the Ignotum System, Windswept’s surface was hidden under a dense cloud of dust. It was only later that we realized it is more similar to Duna than Eve.\n\nWEATHER REPORT: Moderate. Micrometeorites flung from Tension into Windswept's atmosphere create gentle, high-altitude clouds. These clouds obscure little of the surface. Sadly, the same can’t be said for the dust storms.
+			description = <color=#E0A896>[HAZARD LEVEL: 3] \n[CLASS: Atmospheric]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA gorgeous desert planet that suffers from frequent dust storms. It has large red basins and sandy continents, indicating it used to have shallow oceans and potentially life. Because the planet is no longer tectonically active, it may be possible to find intact fossils on its surface. \n\nWhen we first entered the Ignotum System, Windswept’s surface was hidden under a dense cloud of dust. It was only later that we realized it is more similar to Duna than Eve.\n\nWEATHER REPORT: Moderate. Micrometeorites flung from Tension into Windswept's atmosphere create gentle, high-altitude clouds. These clouds obscure little of the surface. Sadly, the same can’t be said for the dust storms.
 			
 			radius = 580000
 			geeASL = 0.96
@@ -127,7 +127,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Sun
+			referenceBody = Solus
 			color = 0.657691956,0.530768394,0.392307699,1
 			specColor = 0.796153843,0.641629279,0.457692415,1
 			iconTexture = OR/OR_Textures/PluginData/Icons/Windswept.png
