--- a/OR/EVE/Clouds.cfg
+++ b/OR/EVE/Clouds.cfg
@@ -1039,7 +1039,7 @@ EVE_CLOUDS
 	OBJECT
 	{
 		name = Frontier-snowstorm
-		body = Kerbin
+		body = Frontier
 		altitude = 4000
 		detailSpeed = 0,6,0
 		speed = 0,80,0
