--- a/OR/scatterer/config/Sunflares/Sun.cfg
+++ b/OR/scatterer/config/Sunflares/Sun.cfg
@@ -1,6 +1,6 @@
 Scatterer_sunflare
 {
-    Sun
+    Solus
     {
         syntaxVersion = 2
         flareColor = 1.0,1.0,1.0
@@ -8,7 +8,7 @@ Scatterer_sunflare
         {
             Item
             {
-                texture = OR/scatterer/config/Sunflares/Sun/sunFlare.png
+                texture = OR/scatterer/config/Sunflares/Sun/solusFlare.png
                 displayAspectRatio = 1
                 scaleCurve
                 {
@@ -24,7 +24,7 @@ Scatterer_sunflare
             }
             Item
             {
-                texture = OR/scatterer/config/Sunflares/Sun/sunSpikes.png
+                texture = OR/scatterer/config/Sunflares/Sun/solusSpikes.png
                 displayAspectRatio = 1
                 scaleCurve
                 {
@@ -43,7 +43,7 @@ Scatterer_sunflare
         {
             Item
             {
-                texture = OR/scatterer/config/Sunflares/Sun/Ghost1.png
+                texture = OR/scatterer/config/Sunflares/Sun/SolusGhost1.png
                 intensityCurve
                 {
                     key = 2 0.0 0 0
@@ -71,7 +71,7 @@ Scatterer_sunflare
             }
             Item
             {
-                texture = OR/scatterer/config/Sunflares/Sun/Ghost2.png
+                texture = OR/scatterer/config/Sunflares/Sun/SolusGhost2.png
                 intensityCurve
                 {
                     key = 2 0 0 0
