--- a/OR/scatterer/config/planetsList.cfg
+++ b/OR/scatterer/config/planetsList.cfg
@@ -1,19 +1,18 @@
-@Scatterer_planetsList
+@Scatterer_planetsList:FOR[OR]
 {		
-	!scattererCelestialBodies {}
-	scattererCelestialBodies
+	@scattererCelestialBodies
 	{
 		Item
 		{
-			celestialBodyName = Kerbin
-			transformName = Kerbin
+			celestialBodyName = Frontier
+			transformName = Frontier
 			loadDistance = 400000000
 			unloadDistance = 400000000
 			hasOcean = False
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
 			cloudIntegrationUsesScattererSunColors = False
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			sunsUseIntensityCurves = False
 			eclipseCasters
@@ -30,7 +29,7 @@
 			hasOcean = True
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -48,7 +47,7 @@
 			hasOcean = True
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -67,7 +66,7 @@
 			hasOcean = False
 			flatScaledSpaceModel = True
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -87,7 +86,7 @@
 			hasOcean = True
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -108,7 +107,7 @@
 			hasOcean = False
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -126,7 +125,7 @@
 			hasOcean = True
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -146,7 +145,7 @@
 			hasOcean = True
 			flatScaledSpaceModel = False
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -166,7 +165,7 @@
 			hasOcean = True
 			flatScaledSpaceModel = True
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
@@ -184,7 +183,7 @@
 			hasOcean = False
 			flatScaledSpaceModel = True
 			usesCloudIntegration = True
-			mainSunCelestialBody = Sun
+			mainSunCelestialBody = Solus
 			sunColor = 1.0,1.0,1.0
 			cloudIntegrationUsesScattererSunColors = False
 			sunsUseIntensityCurves = False
