--- a/OR/Configs/Abyss.cfg
+++ b/OR/Configs/Abyss.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#5AB55A>[HAZARD LEVEL: 5] \n[CLASS: Exotic Atmospheric]</color> \nA vibrant green moon tickling the dragon’s tail. It is a tidally strained world of chlorine, volcanic islands, and violent oceans. Due to observational difficulties, we know little else about its surface. Extreme caution should be taken when exploring here. \n\nWhen we first discovered Abyss, many Kerbals were excited by the prospect of swimming there. This is no longer the case.\n\nWEATHER REPORT: Severe. Tidal heating combined with a chlorinated global ocean generates a dense, unstable cloud deck of highly corrosive vapor.
+			description = <color=#5AB55A>[HAZARD LEVEL: 5] \n[CLASS: Exotic Atmospheric]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA vibrant green moon tickling the dragon’s tail. It is a tidally strained world of chlorine, volcanic islands, and violent oceans. Due to observational difficulties, we know little else about its surface. Extreme caution should be taken when exploring here. \n\nWhen we first discovered Abyss, many Kerbals were excited by the prospect of swimming there. This is no longer the case.\n\nWEATHER REPORT: Severe. Tidal heating combined with a chlorinated global ocean generates a dense, unstable cloud deck of highly corrosive vapor.
 
 			radius = 525000
 			geeASL = 0.91
