--- a/OR/Configs/Cetus.cfg
+++ b/OR/Configs/Cetus.cfg
@@ -12,7 +12,7 @@
 		}
 		Properties
 		{
-			description = <color=#B7B7B7>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color> \nA moon(?) that breaks all expectations for what a celestial body should look like. The object’s cylindrical shape is so bizarre that we suspect it is not of natural origin. Further research on Cetus is needed before we can draw any conclusions. \n\nSome Kerbals think that Cetus looks like an instrument, giving it the beloved nickname "Kraken’s Drum".
+			description = <color=#B7B7B7>[HAZARD LEVEL: 2] [CLASS: Vacuum]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA moon(?) that breaks all expectations for what a celestial body should look like. The object’s cylindrical shape is so bizarre that we suspect it is not of natural origin. Further research on Cetus is needed before we can draw any conclusions. \n\nSome Kerbals think that Cetus looks like an instrument, giving it the beloved nickname "Kraken’s Drum".
 
 			radius = 3000
 			geeASL = 0.015
