--- a/OR/Configs/Fracture.cfg
+++ b/OR/Configs/Fracture.cfg
@@ -13,7 +13,7 @@
 		}
 		Properties
 		{
-			description = <color=#CC0300>[HAZARD LEVEL: 5] \n[CLASS: Exotic Atmospheric]</color> \nA hellish world dancing on the edge of the inferno. Intense solar radiation has melted its surface into a chaotic mess of lava and jagged cliffs, and a superheated atmosphere vents volcanic fumes and rock vapor into deep space. The planet is tidally locked to Solus; exploring its dark side is ill advised.\n\nFracture was discovered during an analysis of Solus’ sunspots. Some Kerbals say it “looks like the Moho we were promised in the stories.”\n\nWEATHER REPORT: Unimaginable. Noxious gas escapes Fracture at speeds we aren’t comfortable with.
+			description = <color=#CC0300>[HAZARD LEVEL: 5]\n[CLASS: Exotic Atmospheric]</color>\n[DATA RECOVERED FROM EXPEDITION]\nA hellish world dancing on the edge of the inferno. Intense solar radiation has melted its surface into a chaotic mess of lava and jagged cliffs, and a superheated atmosphere vents volcanic fumes and rock vapor into deep space. The planet is tidally locked to Solus; exploring its dark side is ill advised.\n\nFracture was discovered during an analysis of Solus’ sunspots. Some Kerbals say it “looks like Moho but in the stories.”\n\nWEATHER REPORT: Unimaginable. Noxious gas escapes Fracture at speeds we aren’t comfortable with.
 			radius = 350000
 			geeASL = 0.6
 			albedo = 0.25
@@ -105,7 +105,7 @@
 		}
 		Orbit
 		{
-			referenceBody = Sun
+			referenceBody = Solus
 			color = 0.669230402,0.265384614,0.27692309,1
 			iconTexture = OR/OR_Textures/PluginData/Icons/Fracture.png
 			inclination = 8
