--- a/OR/Configs/Serenity.cfg
+++ b/OR/Configs/Serenity.cfg
@@ -18,7 +18,7 @@
         Properties
         {
 			displayName = Serenity^N
-            description = <color=#FFC6F5>[HAZARD LEVEL: 5] \n[CLASS: Ice Giant]</color> \nAn ice giant almost four times the size of Kerbin. This is the final known planet in the Ignotum System. Locked in a binary orbit with another ice giant, it offers us endless opportunities for ground-breaking science and pretty pictures. It is speculated that a deep layer of liquid separates its atmosphere from its metallic interior. \n\nIf not already obvious, we should avoid sending Kerbals here.\n\nWEATHER REPORT: Hazardous. While not as turbulent as Rage, the cloud decks blanketing Serenity are bitterly cold.
+            description = <color=#FFC6F5>[HAZARD LEVEL: 5]\n[CLASS: Ice Giant]</color>\n[DATA RECOVERED FROM EXPEDITION]\nAn ice giant almost four times the size of Kerbin. This is the final known planet in the Ignotum System. Locked in a binary orbit with another ice giant, it offers us endless opportunities for ground-breaking science and pretty pictures. It is speculated that a deep layer of liquid separates its atmosphere from its metallic interior. \n\nIf not already obvious, we should avoid sending Kerbals here.\n\nWEATHER REPORT: Hazardous. While not as turbulent as Rage, the cloud decks blanketing Serenity are bitterly cold.
 			
 			albedo = 0.3
 			radius = 2400000
@@ -76,7 +76,7 @@
 		}
         Orbit
         {
-            referenceBody = Sun
+            referenceBody = Solus
             color = 0.765384614,0.55384618,0.750000119,1
 			iconTexture = OR/OR_Textures/PluginData/Icons/Serenity.png
             inclination = 3.5
