--- a/OR/Configs/ScienceDefinitions.cfg
+++ b/OR/Configs/ScienceDefinitions.cfg
@@ -922,7 +922,7 @@
 		CetusSrfSplashed = GOOOOOOOOO BLUB BLUB
 		CetusSrfLandedDrumHeads = The goo rubs against the strange surface and boils in the vacuum. It clings onto the ground for dear life.
 		CetusSrfLandedSisyphusSlopes = The goo rubs the strange surface and boils in the vacuum.
-		CetusSrfLandedDrumBase = The goo rubs the strange surface boils in the vacuum.
+		CetusSrfLandedDrumBase = The goo rubs the strange surface and boils in the vacuum.
 		
 		//Frontier (GOOD)
 		KerbinSrfLandedOxidizedFlats = The goo is instantly frozen.
